test/sema/expr-stmt-unused-result.delta.output
expr-stmt-unused-result.delta:5:10: error: unexpected ';'
    2 + 2;
         ^
