test/sema/expr-stmt-unused-result.delta
// RUN: %check_errors %not %delta -print-ir %s

void main() {
    // CHECK: [[@LINE+1]]:10: error: unexpected ';'
    2 + 2;
}
